# GHOST-WCSim

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Import.sh  Makefile  README.md  deleteTool.sh  dependencies.cmake  hkinstall.py  newTool.sh  renameTool.sh
.github/workflows/: c-cpp.yml  clang-format.yml
HKG4DetectorConstruction/: HKG4DetectorConstruction.cpp  HKG4DetectorConstruction.h  README.md
HKG4EventAction/: HKG4EventAction.cpp  HKG4EventAction.h  README.md
HKG4PhysicsList/: HKG4PhysicsList.cpp  HKG4PhysicsList.h  README.md
HKG4PhysicsListFactory/: HKG4PhysicsListFactory.cpp  HKG4PhysicsListFactory.h  README.md
HKG4PrimaryGeneratorAction/: HKG4PrimaryGeneratorAction.cpp  HKG4PrimaryGeneratorAction.h  README.md
HKG4RunAction/: HKG4RunAction.cpp  HKG4RunAction.h  README.md
HKG4StackingAction/: HKG4StackingAction.cpp  HKG4StackingAction.h  README.md
HKG4SteppingAction/: HKG4SteppingAction.cpp  HKG4SteppingAction.h  README.md
HKG4TrackingAction/: HKG4TrackingAction.cpp  HKG4TrackingAction.h  README.md
HKGFileWriterBase/: HKGFileWriterBase.cpp  HKGFileWriterBase.h  README.md
HKGFileWriterRootWCSim/: HKGFileWriterRootWCSim.cpp  HKGFileWriterRootWCSim.h  README.md
OriginalWCSim/: CMakeLists.txt  README.md  WCSim.mac
OriginalWCSim/cmake/: PackageBuilder.cmake  PackageBuilderMacros.cmake  WCSimConfig.cmake.in
WCSim_exe/: README.md  WCSim_exe.cpp  WCSim_exe.h
docs/: README.md
src/: CMakeLists.txt  Utilities.cpp  Utilities.h
template/: MyTool.h  MyToolDynamicMultiThread.h  MyToolMultiThread.h  MyToolThread.h
(+102 files in other folders)
